Actor Types, Player Properties - Add Actor Types module settings. - Add Player Properties module setting.

--- a/templates/tag-form.hbs
+++ b/templates/tag-form.hbs
@@ -2,7 +2,7 @@
     <form class="categories flexcol">
         <div class="scrollable">
             <section>
-                <div>{{localize "changeLog.tagForm.selectedProperties"}}</div>
+                <div>{{label.selected}}</div>
                 <div>
                     <input
                         name="change-log-taginput"
@@ -12,7 +12,7 @@
                 </div>
                 <div>
                     <button type="button" id="change-log-clear-tags" class="tags--removeAllBtn">
-                        <i class="fa-duotone fa-filter-circle-xmark"></i>{{localize "changeLog.tagForm.clear"}}
+                        <i class="fa-duotone fa-filter-circle-xmark"></i>{{label.clear}}
                     </button>
                 </div>
             </section>
