Hide Card, Refactor - Hide chat cards when the user is not whispered. - Refactor code into smaller methods.

--- a/styles/change-log.css
+++ b/styles/change-log.css
@@ -175,3 +175,7 @@
 .change-log-tags-dropdown .tagify__dropdown__item--hidden {
     display: none;
 }
+
+.change-log-card-hidden {
+    display: none;
+}
