In Combat, Derived Properties - Add support for the inCombat property. - Add support for derived properties.

--- a/templates/chat-card.hbs
+++ b/templates/chat-card.hbs
@@ -1,7 +1,7 @@
 <div class="change-log-card-content" data-tooltip="{{tooltip}}">
     {{#if document1Name}}<span class="change-log-card-document1">{{document1Name}}</span>{{/if}}
     {{#if document2Name}}<span class="change-log-card-document2">{{document2Name}}</span>{{/if}}
-    {{#if property}}<span class="change-log-card-property">{{property}}</span>{{/if}}
+    {{#if propertyName}}<span class="change-log-card-property">{{propertyName}}</span>{{/if}}
     <div class="change-log-card-values">
         {{#if oldValue includeZero=true}}
         <div class="change-log-card-old-value">{{{oldValue}}}</div>
