--- a/styles/change-log.css
+++ b/styles/change-log.css
@@ -43,7 +43,7 @@
     margin-top: 0.2rem;
 }
 
-.change-log-taginput {
+.tagify.change-log-taginput {
     align-content: start;
     background: rgba(0, 0, 0, 0.05);
     border: 1px solid var(--color-border-light-tertiary);
