#13 - Add setting to show equation for numerical changes.

--- a/styles/change-log.css
+++ b/styles/change-log.css
@@ -46,6 +46,12 @@
     justify-content: center;
 }
 
+.change-log-card-adjustment-value {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+}
+
 .change-log-card-new-value {
     display: flex;
     flex: 1;
