--- a/styles/change-log.css
+++ b/styles/change-log.css
@@ -62,99 +62,6 @@
     margin-top: 0.2rem;
 }
 
-.tagify.change-log-taginput {
-    align-content: start;
-    background: rgba(0, 0, 0, 0.05);
-    border: 1px solid var(--color-border-light-tertiary);
-    border-radius: 3px;
-    display: inline-flex;
-    font-family: inherit;
-    font-size: var(--font-size-12);
-    gap: 5px;
-    height: 200px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding: 5px;
-    text-overflow: ellipsis;
-    width: 100%;
-}
-
-.tagify.change-log-taginput:hover {
-    border: 1px solid var(--color-border-light-tertiary);
-}
-
-.change-log-taginput .tagify__tag {
-    font-size: var(--font-size-12);
-    margin: 0;
-}
-
-.change-log-taginput .tagify__tag>div::before {
-    background-color: rgba(0, 0, 0, 0.05);
-    border: 1px solid var(--color-border-light-tertiary);
-    box-shadow: none;
-}
-
-.change-log-taginput .tagify__tag:focus div::before,.tagify__tag:hover:not([readonly]) div::before {
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    box-shadow: 0 0 5px var(--color-shadow-primary);
-}
-
-.change-log-taginput .tagify__tag__removeBtn:hover+div::before {
-    box-shadow: 0 0 5px var(--color-shadow-primary);
-}
-
-.change-log-taginput .tagify__input {
-    font-size: var(--font-size-12);
-    margin: 0;
-}
-
-.change-log-taginput .tagify__tag .tagify__tag__removeBtn:focus + div span,
-.change-log-taginput .tagify__tag .tagify__tag__removeBtn:hover + div span {
-    opacity: 100%;
-}
-
-.change-log-taginput .tagify__tag__removeBtn:focus + div::before,
-.change-log-taginput .tagify__tag__removeBtn:hover + div::before {
-    border: 1px solid var(--color-shadow-primary);
-    box-shadow: 0 0 5px var(--color-shadow-primary) !important;
-}
-
-.change-log-taginput .tagify__tag__removeBtn:hover {
-    background: var(--color-border-highlight-alt);
-}
-
-.change-log-form-light-button {
-    background: rgba(255, 255, 240, 0.8);
-    border: 1px solid var(--color-border-light-primary);
-}
-
-.window-app.change-log-tag-form .window-content {
-    padding: 0;
-}
-
-.change-log-tag-form .window-content > div {
-    height: 100%;
-    flex-wrap: nowrap;
-}
-
-.change-log-tag-form .categories {
-    height: 100%;
-}
-
-.change-log-tag-form .categories .scrollable {
-    flex: 1;
-    overflow: hidden auto;
-    padding: 0.5rem 0.5rem 0 0.5rem;
-}
-
-.change-log-tag-form .categories footer {
-    margin: 0.5rem;
-    flex: 0;
-}
-
 .change-log-form-col-group {
     display: flex;
     flex-direction: column;
@@ -167,6 +74,71 @@
     gap: 0.2rem;
 }
 
+/*
+ * TAGIFY
+ */
+
+.change-log-tagify-app .standard-form {
+    height: 100%;
+}
+
+.tagify.change-log-tagify {
+    --tag-bg: none;
+    --tag-hover: none;
+    --tag-text-color: var(--color-text-primary);
+    --tag-border-color: none;
+    --tag-remove-btn-color: var(--color-text-primary);
+    --tag-remove-btn-bg--hover: none;
+    align-content: start;
+    border: 1px solid var(--color-border-light-tertiary);
+    border-radius: 3px;
+    display: inline-flex;
+    gap: 5px;
+    height: 240px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 5px;
+    text-overflow: ellipsis;
+    width: 100%;
+}
+
+.change-log-tagify .tagify__tag {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    font-size: var(--font-size-12);
+    border-radius: 4px;
+}
+
+.change-log-tagify .tagify__tag:hover {
+    cursor: grab;
+}
+
+.change-log-tagify .tagify__tag:focus:not([readonly]) div::before,
+.change-log-tagify .tagify__tag:hover:not([readonly]) div::before {
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 4px var(--color-shadow-primary) !important; 
+}
+
+.change-log-tagify .tagify__tag .tagify__tag__removeBtn:focus + div span,
+.change-log-tagify .tagify__tag .tagify__tag__removeBtn:hover + div span {
+    opacity: 100%;
+}
+
+.change-log-tagify .tagify__tag__removeBtn + div::before {
+    border: 1px solid var(--color-border-dark-3);
+    box-shadow: none !important;
+}
+
+.change-log-tagify .tagify__tag__removeBtn:focus::after,
+.change-log-tagify .tagify__tag__removeBtn:hover::after{
+    text-shadow: 0 0 3px var(--color-shadow-primary);
+}
+
 .change-log-tags-dropdown .tagify__dropdown__wrapper {
     align-content: start;
     background: rgba(0, 0, 0, 0.05);
@@ -174,7 +146,7 @@
     border-radius: 3px;
     display: flex;
     flex-wrap: wrap;
-    height: 200px;
+    height: 240px;
     font-size: var(--font-size-12);
     gap: 5px;
     padding: 5px;
@@ -182,24 +154,21 @@
 }
 
 .change-log-tags-dropdown .tagify__dropdown__item {
-    border: 1px solid var(--color-border-light-tertiary);
     display: inline-block;
     vertical-align: middle;
-    border-radius: 3px;
+    border: 1px solid var(--color-border-dark-3);
+    border-radius: 4px;
     padding: 0.3em 0.5em;
-    background: rgba(0,0,0, 0.05);
+    background: none;
     margin: 0;
     font-size: var(--font-size-12);
-    color: black;
+    color: var(--color-text-primary);
     transition: 0s;
 }
 
-.change-log-tags-dropdown .tagify__dropdown__item--active {
-    color: black;
-}
-
 .change-log-tags-dropdown .tagify__dropdown__item:hover {
-    box-shadow: 0 0 5px var(--color-shadow-primary);
+    border: 1px solid transparent;
+    box-shadow: 0px 0px 4px var(--color-shadow-primary); 
 }
 
 .change-log-tags-dropdown .tagify__dropdown__item--hidden {
