--- a/styles/change-log.css
+++ b/styles/change-log.css
@@ -86,11 +86,15 @@
     --tag-bg: none;
     --tag-hover: none;
     --tag-text-color: var(--color-text-primary);
-    --tag-border-color: none;
+    --tags-border-color: var(--color-border);
+    --tags-focus-border-color: var(--color-border);
+    --tags-hover-border-color: var(--color-border);
+    --tag-text-color: var(--color-text-primary);
     --tag-remove-btn-color: var(--color-text-primary);
     --tag-remove-btn-bg--hover: none;
     align-content: start;
-    border: 1px solid var(--color-border-light-tertiary);
+    background-color: rgba(0, 0, 0, 0.05);
+    border: 1px solid var(--color-border);
     border-radius: 3px;
     display: inline-flex;
     gap: 5px;
@@ -110,8 +114,21 @@
     border-radius: 4px;
 }
 
+
 .change-log-tagify .tagify__tag:hover {
     cursor: grab;
+}
+
+.change-log-tagify .tagify__tag__removeBtn::after {
+    content: "\f00d";
+    font-family: "Font Awesome 5 Free";
+    font-size: var(--font-size-10);
+    font-weight: 700;
+    padding-bottom: 2px;
+}
+
+.change-log-tagify .tagify__tag__removeBtn:hover {
+    color: var(--color-text-primary);
 }
 
 .change-log-tagify .tagify__tag:focus:not([readonly]) div::before,
@@ -121,7 +138,7 @@
     bottom: 0;
     left: 0;
     border: 1px solid transparent;
-    box-shadow: 0px 0px 4px var(--color-shadow-primary) !important; 
+    box-shadow: 0px 0px 5px var(--color-shadow-primary) !important;
 }
 
 .change-log-tagify .tagify__tag .tagify__tag__removeBtn:focus + div span,
@@ -130,19 +147,19 @@
 }
 
 .change-log-tagify .tagify__tag__removeBtn + div::before {
-    border: 1px solid var(--color-border-dark-3);
+    border: 1px solid var(--color-border);
     box-shadow: none !important;
 }
 
 .change-log-tagify .tagify__tag__removeBtn:focus::after,
 .change-log-tagify .tagify__tag__removeBtn:hover::after{
-    text-shadow: 0 0 3px var(--color-shadow-primary);
+    text-shadow: 0 0 2px var(--color-shadow-primary);
 }
 
 .change-log-tags-dropdown .tagify__dropdown__wrapper {
     align-content: start;
     background: rgba(0, 0, 0, 0.05);
-    border: 1px solid var(--color-border-light-tertiary);
+    border: 1px solid var(--color-border);
     border-radius: 3px;
     display: flex;
     flex-wrap: wrap;
@@ -156,7 +173,7 @@
 .change-log-tags-dropdown .tagify__dropdown__item {
     display: inline-block;
     vertical-align: middle;
-    border: 1px solid var(--color-border-dark-3);
+    border: 1px solid var(--color-border);
     border-radius: 4px;
     padding: 0.3em 0.5em;
     background: none;
@@ -168,9 +185,21 @@
 
 .change-log-tags-dropdown .tagify__dropdown__item:hover {
     border: 1px solid transparent;
-    box-shadow: 0px 0px 4px var(--color-shadow-primary); 
+    box-shadow: 0px 0px 5px var(--color-shadow-primary);
 }
 
 .change-log-tags-dropdown .tagify__dropdown__item--hidden {
     display: none;
+}
+
+.change-log-tagify .tagify__input {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    font-size: var(--font-size-12);
+    margin: 0;
+    line-height: 1;
+    padding: var(--tag-pad,.3em .5em);
+    border: 1px solid var(--color-border);
+    min-width: 100px;
+    flex-grow: 0;
 }
