--- a/templates/tagify-app.hbs
+++ b/templates/tagify-app.hbs
@@ -10,7 +10,7 @@
                     placeholder="{{placeholder}}"
                 />
             </div>
-            <div class="change-log-row-group">
+            <div class="change-log-col-group">
                 <button type="button" id="change-log-select-all" class="bright" data-action="selectAllTags">
                     <i class="fa-solid fa-filter"></i>{{localize "changeLog.tagifyApp.selectAll"}}
                 </button>
